[package]
name = "wcif"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
monostate = "0.1.13"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["raw_value"] }
serde_with = "3.11.0"

[dev-dependencies]
serde_json = "1.0.132"
reqwest = "0.12.8"

[features]
default = ["parse_activity_code", "parse_attempt_result", "parse_puzzle_type"]
parse_puzzle_type = []
parse_attempt_result = []
parse_activity_code = []
private_properties = []
groupifier = []
