[package]
name = "wcif"
description = "A parser for the WCA Competition Interchange Format"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
categories = ["parser-implementations"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
monostate = "0.1.13"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"

[features]
default = ["parse_activity_code", "parse_attempt_result", "parse_puzzle_type"]
parse_puzzle_type = []
parse_attempt_result = []
parse_activity_code = []
extension_groupifier = []
extension_delegate_dashboard = []